# openrenoir

./: .appveyor.yml  .gitattributes  .gitignore  Makefile.in  README.md  configure  configure.ac  nimbleconf.inc  sha1-impl.awk
.git-crypt/keys/default/0/: 1C67FE43B8CA95EB3848F2F9CB821B83C620B1AB.gpg
a/: .gitattributes  dcfc80_frob.c  oroir80_frob.c
build-aux/: sha1-impl.awk
config/: check-absent.m4
example/: ex1-j.c
h/decantificate/: decantificate.h
h/openrenoir/: _check_absent.h.in  _version.h.in  openrenoir.h
test/: check-sha1-impl.sh.in  ci-base-setup.sh  ci-build-and-install.sh  ci-check.sh
tool/: .gitattributes  autoscan.add.list  axrenoirscan.in  dcfc80.cocci  dcfc_helper.py  dcfc_minihelper.py  dcfcf0.cocci  decantificate  openrenoir  openrenoir.in  oroir80.cocci  oroir_helper.py  oroir_minihelper.py  oroirf0.cocci  scan.py  scan_consts.py.in
